// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hyperlink /> with element prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  text-decoration: underline;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<Hyperlink
  element="span"
>
  <TextPrimitive
    color="black"
    element="span"
    size="regular"
    spacing="none"
    underline={true}
    variant="p"
    weight="regular"
  >
    <Paragraph
      color="black"
      element="span"
      size="regular"
      spacing="none"
      underline={true}
      weight="regular"
    >
      <Primitive
        className="c0"
        color="black"
        element="span"
        size="regular"
        spacing="none"
        underline={true}
        weight="regular"
      >
        <span
          className="c0"
        >
          Small size test
        </span>
      </Primitive>
    </Paragraph>
  </TextPrimitive>
</Hyperlink>
`;

exports[`<Hyperlink /> with initial props 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  text-decoration: underline;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<Hyperlink
  size="regular"
>
  <TextPrimitive
    color="black"
    element="p"
    size="regular"
    spacing="none"
    underline={true}
    variant="p"
    weight="regular"
  >
    <Paragraph
      color="black"
      element="p"
      size="regular"
      spacing="none"
      underline={true}
      weight="regular"
    >
      <Primitive
        className="c0"
        color="black"
        element="p"
        size="regular"
        spacing="none"
        underline={true}
        weight="regular"
      >
        <p
          className="c0"
        >
          Regular size test
        </p>
      </Primitive>
    </Paragraph>
  </TextPrimitive>
</Hyperlink>
`;
